--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<url>http://www.xuxueli.com/</url>
 
 	<modules>
+		<!--<module>xxl-job-core</module>-->
 		<module>xxl-job-core</module>
 		<module>xxl-job-admin</module>
 		<module>xxl-job-executor-samples</module>
